--- a/src/custom.scss
+++ b/src/custom.scss
@@ -22,8 +22,8 @@ h1 {
     padding: 20px;
 }
 
-$light: #fdd;
-$info: #555;
+// $light: #fdd;
+// $info: #555;
 
 
 @import "../node_modules/bootstrap/scss/bootstrap";
