--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,10 +1,7 @@
-h1 {
-    background-color:white;
-}
-
 
 .container {
-    background-image: url(https://cdn.pixabay.com/photo/2016/10/09/08/32/digital-marketing-1725340__340.jpg);
+    background-image: url(https://cdn.pixabay.com/photo/2016/11/23/15/31/man-1853545__340.jpg);
+    background-image: cross-fade(-10);
     background-repeat: no-repeat, repeat;
     background-position: justify;
     background-size: cover;
@@ -17,13 +14,14 @@ h1 {
 }
 
 .container h1, p {
-    background-color: #ffffff73;
-    // background-color: white;
+    background-color: #ffffff33;
     padding: 20px;
+    color: rgb(255, 208, 0);
 }
 
 // $light: #fdd;
 // $info: #555;
+// $primary: red;
 
 
 @import "../node_modules/bootstrap/scss/bootstrap";
